--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,18 @@
 # System
 .DS_Store
+.vscode/
+.idea/
 
 # Backend
 backend/venv/
 backend/__pycache__/
 backend/.env
+backend/*.db
+backend/*.sqlite3
+*.log
 
 # Frontend
 frontend/node_modules/
 frontend/dist/
 frontend/.env
+frontend/.DS_Store
